TestFiles/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lbtest
  name: my-app
spec:
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
#      serviceAccountName: pod-identity-sa
      containers:
      - name: my-app
        image: public.ecr.aws/nginx/nginx
        ports:
        - containerPort: 80
